registro de inquilino con notificacion

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ckeditor/ckeditor5-build-classic": "^35.2.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "alertifyjs": "^1.13.1",
     "angular-datatables": "^14.0.0",
     "angular-ng-autocomplete": "^2.0.1",
     "apexcharts": "^3.27.1",
@@ -46,6 +48,7 @@
     "ngx-clipboard": "^15.1.0",
     "ngx-dropzone": "^2.2.2",
     "ngx-toastr": "^12.1.0",
+    "ngx-webcam": "^0.4.1",
     "npm-force-resolutions": "0.0.10",
     "raphael": "^2.3.0",
     "rxjs": "~7.5.0",
